// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RootApp should render correctly - no data 1`] = `
Array [
  <div
    class="pf-c-drawer__content"
  >
    <main
      class="pf-c-page__main pf-l-page__main"
      id="root"
      role="main"
    />
  </div>,
  <aside
    class="pf-c-drawer__panel"
  >
    <div
      class="pf-c-drawer__panel-body"
    />
  </aside>,
]
`;

exports[`RootApp should render correctly 1`] = `
Array [
  <div
    class="pf-c-drawer__content"
    ouia-page-group="some-location"
    ouia-page-type="some-app"
  >
    <main
      class="pf-c-page__main pf-l-page__main"
      id="root"
      role="main"
    />
  </div>,
  <aside
    class="pf-c-drawer__panel"
  >
    <div
      class="pf-c-drawer__panel-body"
    />
  </aside>,
]
`;

exports[`RootApp should render correctly with pageAction 1`] = `
Array [
  <div
    class="pf-c-drawer__content"
    ouia-page-action="some-action"
    ouia-page-group="some-location"
    ouia-page-type="some-app"
  >
    <main
      class="pf-c-page__main pf-l-page__main"
      id="root"
      role="main"
    />
  </div>,
  <aside
    class="pf-c-drawer__panel"
  >
    <div
      class="pf-c-drawer__panel-body"
    />
  </aside>,
]
`;

exports[`RootApp should render correctly with pageObjectId 1`] = `
Array [
  <div
    class="pf-c-drawer__content"
    ouia-page-group="some-location"
    ouia-page-object-id="some-object-id"
    ouia-page-type="some-app"
  >
    <main
      class="pf-c-page__main pf-l-page__main"
      id="root"
      role="main"
    />
  </div>,
  <aside
    class="pf-c-drawer__panel"
  >
    <div
      class="pf-c-drawer__panel-body"
    />
  </aside>,
]
`;

exports[`RootApp should render correctly with pageObjectId and pageAction 1`] = `
Array [
  <div
    class="pf-c-drawer__content"
    ouia-page-action="some-action"
    ouia-page-group="some-location"
    ouia-page-object-id="some-object-id"
    ouia-page-type="some-app"
  >
    <main
      class="pf-c-page__main pf-l-page__main"
      id="root"
      role="main"
    />
  </div>,
  <aside
    class="pf-c-drawer__panel"
  >
    <div
      class="pf-c-drawer__panel-body"
    />
  </aside>,
]
`;
